添加 tableView 填充数据

--- a/SwiftWorkFrame/Podfile
+++ b/SwiftWorkFrame/Podfile
@@ -6,4 +6,5 @@ target 'SwiftWorkFrame' do
     pod 'Alamofire', '~> 4.4’
     pod 'ObjectMapper'
     pod 'ESPullToRefresh'
+    pod 'Kingfisher'
 end
